feat: add swagger documentation in /api/docs
